--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,12 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    container:
+      image: pivotalrabbitmq/rabbitmq-stream
+      env:
+        RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
+      ports:
+        - 5551:5551
     steps:
     - uses: actions/checkout@v2
 
@@ -17,6 +23,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
+
+    - name: Stream queues in Docker
+
 
     - name: Build
       run: go build -v ./...
