--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,12 +10,14 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    container:
-      image: pivotalrabbitmq/rabbitmq-stream
-      env:
-        RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
-      ports:
-        - 5551:5551
+    services:
+      rabbitmq-streaming:
+          container:
+            image: pivotalrabbitmq/rabbitmq-stream
+            env:
+              RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
+            ports:
+              - 5551:5551
     steps:
     - uses: actions/checkout@v2
 
