--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,13 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    services:
+      rabbitmq-streaming:
+        image: pivotalrabbitmq/rabbitmq-stream
+        env:
+          RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
+        ports:
+          - 5551:5551
     steps:
     - uses: actions/checkout@v2
 
