--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
 #      run: go test -v ./...
 
     - name: Run coverage
-      run:  go test -v ./... -race -coverprofile=coverage.txt -covermode=atomic
+      run:  go test -v  ./pkg/stream -race -coverprofile=coverage.txt -covermode=atomic
 
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
