--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     services:
       rabbitmq-streaming:
-        image: pivotalrabbitmq/rabbitmq-stream
+        image: pivotalrabbitmq/rabbitmq-streaming
         env:
           RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
         ports:
@@ -32,7 +32,7 @@ jobs:
 #      run: go test -v ./...
 
     - name: Run coverage
-      run:  go test -v  ./pkg/stream -race -coverprofile=coverage.txt -covermode=atomic
+      run:  go test -v  ./pkg/streaming -race -coverprofile=coverage.txt -covermode=atomic
 
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
