--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,6 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     services:
@@ -23,16 +22,35 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.16
 
     - name: Build
       run: go build -v ./...
-
-#    - name: Test
-#      run: go test -v ./...
 
     - name: Run coverage
       run:  go test -v  ./pkg/streaming -race -coverprofile=coverage.txt -covermode=atomic
 
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: gsantomaggio/go-streaming-client:latest
+
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
