--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -27,11 +27,23 @@ jobs:
       - name: Upload coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
 
+     - name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v1
+
+     - name: Login to DockerHub
+       uses: docker/login-action@v1
+       with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Publish
         run: |
+          VERSION=latest
+          export VERSION
           echo "GITHUB_REF:$GITHUB_REF"
           if [[ ! $GITHUB_REF =~ "/tags/" ]]
           then
             VERSION=dev
           fi
+          echo $VERSION
           make perf-test-docker-push
