Use verbose mode instead of echo in Publish step
Signed-off-by: Gerhard Lazu <gerhard@lazu.co.uk>

--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -38,12 +38,11 @@ jobs:
 
       - name: Publish
         run: |
+          set -x
           VERSION=latest
           export VERSION
-          echo "GITHUB_REF:$GITHUB_REF"
           if [[ ! $GITHUB_REF =~ "/tags/" ]]
           then
             VERSION=dev
           fi
-          echo $VERSION
           make perf-test-docker-push
