--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -1,10 +1,10 @@
-name: Test & Publish Image
+name: Test & Publish Docker Image
 
 on:
   push:
 
 jobs:
-  test_and_publish_image:
+  test:
     runs-on: ubuntu-latest
     services:
       rabbitmq-streaming:
@@ -18,25 +18,25 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.16
-
       - uses: actions/checkout@v2
-
-      - name: Test
+      - name: Run tests
         run: make test
-
-      - name: Upload coverage to Codecov
+      - name: Upload code coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
 
+  publish:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
-
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Publish
+      - uses: actions/checkout@v2
+      - name: Publish Docker Image
         run: |
           set -x
           VERSION=latest
