--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -10,7 +10,7 @@ jobs:
       rabbitmq-streaming:
         image: pivotalrabbitmq/rabbitmq-stream
         env:
-          RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream"
+          RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream  advertised_host localhost"
         ports:
           - 5551:5551
     steps:
