--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -4,6 +4,13 @@ on:
   push:
 
 jobs:
+  setup-cluster:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Build the stack
+        run: make rabbitmq-ha-proxy
+
   test:
     runs-on: ubuntu-latest
     services:
