--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -8,12 +8,13 @@ services:
       - back
     hostname: node0
     image: pivotalrabbitmq/rabbitmq-stream
-    ports:
-      - "15672:15672"
-      - "5552:5552"
+#    ports:
+#      - "15672:15672"
+#      - "5552:5552"
     tty: true
     volumes:
      - ./conf/:/etc/rabbitmq/
+     - "./tls-gen/basic/result/:/certs"
   rabbit_node1:
     environment:
       - RABBITMQ_ERLANG_COOKIE='secret_cookie'
@@ -24,12 +25,13 @@ services:
     depends_on:
       - rabbit_node_0
     image: pivotalrabbitmq/rabbitmq-stream
-    ports:
-      - "15673:15672"
-      - "5553:5552"
+#    ports:
+#      - "15673:15672"
+#      - "5553:5552"
     tty: true
     volumes:
       - ./conf/:/etc/rabbitmq/
+      - "./tls-gen/basic/result/:/certs"
   rabbit_node2:
     environment:
       - RABBITMQ_ERLANG_COOKIE='secret_cookie'
@@ -41,11 +43,20 @@ services:
       - rabbit_node_1
     image: pivotalrabbitmq/rabbitmq-stream
     ports:
-      - "15674:15672"
-      - "5554:5552"
+      - "5556:5551"
     tty: true
     volumes:
       - ./conf/:/etc/rabbitmq/
-
+      - "./tls-gen/basic/result/:/certs"
+  haproxy:
+    image: haproxy-rabbitmq-cluster
+#    container_name: haproxy
+    hostname: haproxy
+    ports:
+      - "5553:5552"
+      - "5554:5551"
+      - "15673:15672"
+    networks:
+      - back
 networks:
   back:
