--- a/compose/ha_tls/haproxy.cfg
+++ b/compose/ha_tls/haproxy.cfg
@@ -9,27 +9,27 @@ defaults
 frontend tcp-0_0_0_0-443
     bind *:5551
     mode tcp
-    use_backend example_com_be
+    use_backend rabbitmq-stream-tls
     tcp-request inspect-delay 5s
     tcp-request content accept if { req_ssl_hello_type 1 }
 
-backend example_com_be
+backend rabbitmq-stream-tls
     mode tcp
-    server rabbit_node0 rabbit_node0:5551 check inter 2000 fall 3
-    server rabbit_node1 rabbit_node1:5551 check inter 2000 fall 3
-    server rabbit_node2 rabbit_node2:5551 check inter 2000 fall 3
+    server rabbit_node0 rabbit_node0:5551 check inter 5000 fall 3
+    server rabbit_node1 rabbit_node1:5551 check inter 5000 fall 3
+    server rabbit_node2 rabbit_node2:5551 check inter 5000 fall 3
 
-listen rabbitmq
+listen rabbitmq-stream
     bind 0.0.0.0:5552
     balance roundrobin
-    server rabbit_node0 rabbit_node0:5552 check inter 2000 fall 3
-    server rabbit_node1 rabbit_node1:5552 check inter 2000 fall 3
-    server rabbit_node2 rabbit_node2:5552 check inter 2000 fall 3
+    server rabbit_node0 rabbit_node0:5552 check inter 5000 fall 3
+    server rabbit_node1 rabbit_node1:5552 check inter 5000 fall 3
+    server rabbit_node2 rabbit_node2:5552 check inter 5000 fall 3
 
 
 listen rabbitmq-ui
     bind 0.0.0.0:15672
     balance roundrobin
-    server rabbit_node0 rabbit_node0:15672 check inter 2000 fall 3
-    server rabbit_node1 rabbit_node1:15672 check inter 2000 fall 3
-    server rabbit_node2 rabbit_node2:15672 check inter 2000 fall 3
+    server rabbit_node0 rabbit_node0:15672 check inter 5000 fall 3
+    server rabbit_node1 rabbit_node1:15672 check inter 5000 fall 3
+    server rabbit_node2 rabbit_node2:15672 check inter 5000 fall 3
