--- a/.github/workflows/test_and_publish_image.yml
+++ b/.github/workflows/test_and_publish_image.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go: [ '1.17', '1.18' ]
     services:
       rabbitmq-streaming:
         image: pivotalrabbitmq/rabbitmq-stream
@@ -15,28 +18,57 @@ jobs:
           - 5552:5552
           - 15672:15672
     steps:
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
         with:
-          go-version: 1.17
-      - uses: actions/checkout@v2
-      - name: Run tests
-        run: make test
+          go-version: ${{ matrix.go }}
+          check-latest: true
+      - run: make test
       - name: Upload code coverage to Codecov
         run: bash <(curl -s https://codecov.io/bash)
-
+  test-win32:
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        go: [ '1.17', '1.18' ]
+    services:
+      rabbitmq-streaming:
+        image: pivotalrabbitmq/rabbitmq-stream
+        env:
+          RABBITMQ_SERVER_ADDITIONAL_ERL_ARGS: "-rabbitmq_stream  advertised_host localhost"
+        ports:
+          - 5552:5552
+          - 15672:15672
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go }}
+          check-latest: true
+      - name: Cache installers
+        uses: actions/cache@v3
+        with:
+          # Note: the cache path is relative to the workspace directory
+          # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows#using-the-cache-action
+          path: ~/installers
+          key: ${{ runner.os }}-v0-${{ hashFiles('.ci/versions.json') }}
+      - name: Install and start RabbitMQ
+        run: ./.ci/install.ps1
+      - name: Install GNU make
+        run: choco install make
+      - run: make test
+      - name: Upload code coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
   publish:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, test-win32]
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Publish Docker Image
         run: |
           set -x
