Not sure why but these changes seem to fix tests on win32

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ cue.mod/
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .idea
+coverage
 coverage.txt
 bin/
 examples/examples
