--- a/.github/workflows/build_test_linux.yml
+++ b/.github/workflows/build_test_linux.yml
@@ -25,7 +25,7 @@ jobs:
       run: make build
 
     - name: Test
-      run: make tests
+      run: make tests-ci
 
   e2e_test:
     name: E2E Test
