--- a/.github/workflows/build_test_linux.yml
+++ b/.github/workflows/build_test_linux.yml
@@ -1,13 +1,11 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
-name: Go Tests
+---
+name: Build & Tests
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "v2" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "v2" ]
 
 jobs:
   build:
