Use stable version of Go in CI
We started developing in Go 1.21 because slog package became GA in Go
1.21. The toolchain directive in go.mod is new and only available in Go
1.21. We have to temporarily bump the Go version in CI to 'stable'. We
will provide compatibility to oldstable at a later date.

Signed-off-by: Aitor Perez Cedres <acedres@vmware.com>

--- a/.github/workflows/build_test_linux.yml
+++ b/.github/workflows/build_test_linux.yml
@@ -17,7 +17,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: oldstable
+        go-version: stable
+#        go-version: oldstable
 
     - name: Build
       run: make build
@@ -50,7 +51,8 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: oldstable
+          go-version: stable
+#          go-version: oldstable
 
       - name: E2E Tests
         env:
