--- a/compose/ha_tls/haproxy.cfg
+++ b/compose/ha_tls/haproxy.cfg
@@ -26,6 +26,13 @@ listen rabbitmq-stream
     server rabbit_node1 rabbit_node1:5552 check inter 5000 fall 3
     server rabbit_node2 rabbit_node2:5552 check inter 5000 fall 3
 
+listen rabbitmq-amqp
+    bind 0.0.0.0:5672
+    balance roundrobin
+    server rabbit_node0 rabbit_node0:5672 check inter 5000 fall 3
+    server rabbit_node1 rabbit_node1:5672 check inter 5000 fall 3
+    server rabbit_node2 rabbit_node2:5672 check inter 5000 fall 3
+
 
 listen rabbitmq-ui
     bind 0.0.0.0:15672
