--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Test & Publish Docker Image
+name: Build and Test
 
 on:
   push:
@@ -23,12 +23,12 @@ jobs:
           tags: rabbitmq_tls:latest
           outputs: type=docker,dest=/tmp/rabbitmq_tls.tar
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: rabbitmq_tls
           path: /tmp/rabbitmq_tls.tar
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: rabbitmq_tls
           path: /tmp
@@ -79,23 +79,3 @@ jobs:
       - name: Install GNU make
         run: choco install make
       - run: make test GO_VERSION=${{ steps.setup_go.outputs.go-version }}
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   needs: [test, test-win32]
-  #   steps:
-  #     - uses: docker/setup-buildx-action@v2
-  #     - uses: docker/login-action@v2
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
-  #     - uses: actions/checkout@v3
-  #     - name: Publish Docker Image
-  #       run: |
-  #         set -x
-  #         VERSION=latest
-  #         export VERSION
-  #         if [[ ! $GITHUB_REF =~ "/tags/" ]]
-  #         then
-  #           VERSION=dev
-  #         fi
-  #         make perf-test-docker-push
