--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -87,3 +87,23 @@ jobs:
       - name: Install GNU make
         run: choco install make
       - run: make test GO_VERSION=${{ steps.setup_go.outputs.go-version }}
+  publish:
+    runs-on: ubuntu-latest 
+    needs: [test]
+    steps:
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - uses: actions/checkout@v3
+      - name: Publish Docker Image
+        run: |
+          set -x
+          VERSION=latest
+          export VERSION
+          if [[ ! $GITHUB_REF =~ "/tags/" ]]
+          then
+            VERSION=dev
+          fi
+          make perf-test-docker-push
