--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -63,30 +63,31 @@ jobs:
           verbose: true # optional (default = false)
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-  test-win32:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        go: [ '1.22']
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-go@v5
-        id: setup_go
-        with:
-          go-version: ${{ matrix.go }}
-          check-latest: true
-      - name: Cache installers
-        uses: actions/cache@v4
-        with:
-          # Note: the cache path is relative to the workspace directory
-          # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows#using-the-cache-action
-          path: ~/installers
-          key: ${{ runner.os }}-v0-${{ hashFiles('.ci/versions.json') }}
-      - name: Install and start RabbitMQ
-        run: ./.ci/install.ps1
-      - name: Install GNU make
-        run: choco install make
-      - run: make test GO_VERSION=${{ steps.setup_go.outputs.go-version }}
+  # temporany removed due of https://github.com/actions/checkout/issues/1186
+  # test-win32:
+  #   runs-on: windows-latest
+  #   strategy:
+  #     matrix:
+  #       go: [ '1.22']
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-go@v5
+  #       id: setup_go
+  #       with:
+  #         go-version: ${{ matrix.go }}
+  #         check-latest: true
+  #     - name: Cache installers
+  #       uses: actions/cache@v4
+  #       with:
+  #         # Note: the cache path is relative to the workspace directory
+  #         # https://docs.github.com/en/actions/using-workflows/caching-dependencies-to-speed-up-workflows#using-the-cache-action
+  #         path: ~/installers
+  #         key: ${{ runner.os }}-v0-${{ hashFiles('.ci/versions.json') }}
+  #     - name: Install and start RabbitMQ
+  #       run: ./.ci/install.ps1
+  #     - name: Install GNU make
+  #       run: choco install make
+  #     - run: make test GO_VERSION=${{ steps.setup_go.outputs.go-version }}
   publish:
     runs-on: ubuntu-latest 
     needs: [test]
